discussion/kv_engine/163784/163784_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48925 2/3: Change visitBucket() to pass VBucket&, not shared_ptr

Patch 2/3 in addressing the user-after free issue highlighted in
MB-48925.

To minimise the chance of misuse of the vbucket argument passed via
the visit() method; change it from a VBucketPtr (aka
shared_ptr<VBucket>) to VBucket&. This means the caller cannot
accidently retain a refcount on the VBucket.

Change-Id: I5f16e71858cc6ec78f6addd27a8aaf5a82500c46

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-10-19 10:38:37.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-19 11:09:26.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41243/ : FAILURE

Failure of GoogleTest "FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackUnpersistedPrepareOnTopOfSyncDelete/persistent_magma_value_only_pending":

<pre>
[ RUN      ] FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackUnpersistedPrepareOnTopOfSyncDelete/persistent_magma_value_only_pending
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.719101" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackUnpersistedPrepareOnTopOfSyncDelete/persistent_magma_value_only_pending, where GetParam() = ("persistent_magma", "value_only", "pending") (2 ms)
FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackUnpersistedPrepareOnTopOfSyncDelete/persistent_magma_value_only_pending
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41243/ )

Failure of an engine_testapp test:

<pre>
Running [0049/0159]: stats vkey callback tests...(11 ms) SKIPPED


99% tests passed, 2 tests failed out of 413

Total Test time (real) = 667.53 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41243/ )

Timeout of a CTest test 413/413 Test #269: ep_testsuite.ephemeral.comp_active ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41243/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13560/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13560/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13560/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35049/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12359/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3262/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15170/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16098/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23491/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-19 14:22:31.000000000
Message: 
Patch Set 4:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13560/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13560/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13560/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35049/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12359/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3262/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15170/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16098/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41250/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-10-19 15:27:59.000000000
Message: 
Patch Set 4: Verified+1

Overriding Verified - clang_tidy failure is due to header files not handled by clang-tidy.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-10-20 08:13:25.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-10-20 14:42:53.000000000
Message: 
Patch Set 4: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
